Thu May 27 17:45:26 2004  Tao Lu  <lu@dre.vanderbilt.edu>

	* DnC/tests/Config_Handlers/handler_test.mpb:

	  Added reqires dnc to stop the noise on the scoreboard.

Thu May 27 22:10:27 2004  Emre Turkay <turkaye@dre.vanderbilt.edu>
	* DnC/Core/Deployment.idl:

	Added DeploymentPlan::UUID.

Thu May 27 22:02:21 2004  Emre Turkay  <turkaye@dre.vanderbilt.edu>
	* DnC/Config_Handlers/Plan_Handler.cpp:

	Added handler for DeploymentPlan::UUID

Thu May 27 16:42:26 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/DomainApplicationManager/DomainApplicationManager_Impl.cpp:

          Added a check to make sure that duplicate NodeManager names are
          not added to the internal hashmap maintained in this
          entity. This ensures that the length always corresponds to the
          unique set of node names. Thanks to Gan Deng for pointing this
          out.

Thu May 27 16:38:19 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* DnC/Deployment.xsd: Added UUID element to deploymentPlan.


Thu May 27 13:03:02 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/DomainApplicationManager/DomainApplicationManager_Impl.h:
        * DnC/DomainApplicationManager/DomainApplicationManager_Impl.cpp:

          Added the get_plan_info () method, that parses the plan
          according to the individual nodes on which the plan needs to be
          deployed. Also changed internal tables to use ACE_Vector to
          store plan related information.

Thu May 27 11:02:47 2004  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * DnC/DomainApplicationManager/DomainApplicationManager_Impl.h:
        * DnC/DomainApplicationManager/DomainApplicationManager_Impl.cpp:

          Added two new operations get_uuid and set_uuid that will help
          the ExecutionManager associating the DomainApplicationManager
          with a concrete DeploymentPlan passed. These are defined on the
          servant only.
